[feature] Add Benchmark
[feature] optimize for intersect

[MLIR][presburger] Add benchmarks for the Presburger library

This commit introduces a comprehensive set of benchmarks to measure the performance of various operations in the Presburger library. These benchmarks aim to evaluate the execution time of different operations and assess the impact of optimization techniques on the size of the constraint system.

Differential Revision: https://reviews.llvm.org/D150979

--- a/mlir/CMakeLists.txt
+++ b/mlir/CMakeLists.txt
@@ -267,6 +267,10 @@ if (MLIR_ENABLE_PYTHON_BENCHMARKS)
   add_subdirectory(utils/mbr)
 endif()
 
+if (MLIR_ENABLE_PRESBURGER_BENCHMARKS)
+  add_subdirectory(benchmark/presburger)
+endif()
+
 if(MLIR_STANDALONE_BUILD)
   llvm_distribution_add_targets()
 endif()
